# fmi-oop-pract

./: README.md  problems-bg.docx  problems-bg.md  problems.docx  problems.md  templates-problem.md
cmake-templates/cmake-multi-module-with-catch2/: CMakeLists.txt
cmake-templates/cmake-multi-module-with-catch2/src/: CMakeLists.txt  main.cpp
cmake-templates/cmake-multi-module-with-catch2/test/: CMakeLists.txt  test-functions.cpp
cmake-templates/cmake-with-catch2/: CMakeLists.txt
cmake-templates/cmake-with-catch2/tests/: test_functions.cpp  test_main.cpp
files-pract/: problem-1.md  problem-2.md  problem-3.md  problem-4.md  problem-5.md  problem-6.md  problem-7-advanced.md  problem-8-super-advanced.md
files-pract/solutions/problem-1/: solution-1.cpp
files-pract/solutions/problem-2/: solution-2.cpp
files-pract/solutions/problem-3/: solution-3.cpp
files-pract/solutions/problem-4/: output.txt  solution-4.cpp
files-pract/solutions/problem-5/: solution-5-stringstream.cpp  solution-5.cpp  text.txt
files-pract/solutions/problem-6/: solution-6.cpp
files-pract/solutions/problem-7/: solution-7.cpp
files-pract/solutions/problem-8/: helper_functions.cpp  helper_functions.h  solution-8-no-array.cpp  solution-8-with-array.cpp
info/: namespaces-lookup.md  oop-introduction.md  streams-files.md  unit-testing.md
info/catch2-basic-setup-guide/: README.md
info/catch2-basic-setup-guide/project/: CMakeLists.txt  main.cpp
info/catch2-basic-setup-guide/project/tests/: test_functions.cpp
namespaces-pract/: problems.md
oop-inheritence/: problems-1.md  problems-virtual-methods.md  solution-6.cpp
oop-introduction/: problems-1.md
oop-introduction/solutions/: solution-5.cpp  solution-7.cpp
oop-introduction/solutions/solution-6/: Point3D.cpp  Point3D.h  Point3DFunctions.cpp  Point3DFunctions.h  solution-6-input-points.cpp  solution-6-points-pointers.cpp  solution-6-points-regular.cpp
oop-orthodox-canonical-form/: problems.md  solution-1.cpp
pract-1/: problems-bg.md
pract-1/solutions/: solution-p2.cpp
pract-1/solutions/p5/: calculator.h  main.cpp
pract-2/: problem-1.md  problem-2.md  problem-3.md  problem-grog.md
pract-2/solutions/1-dice-project/: README.md  dice.cpp  dice.h  main.cpp
pract-2/solutions/2-stats-project/: main.cpp  stats.h
pract-2/solutions/3-lib-project/main_project/: CMakeLists.txt  main.cpp
pract-2/solutions/3-lib-project/mathlib/: CMakeLists.txt  mathlib.cpp  mathlib.h
pract-2/solutions/4-unit-tests-project/: CMakeLists.txt  math_functions.cpp  math_functions.h  test_runner.cpp
solutions/: solution-p1.cpp  solution-p3.cpp  solution-p4.cpp
solutions/p5/: calculator.cpp
structs-and-classes/: problems.md
templates/: problem.md
unit-tests/: README.md  problems-1.md  problems-2.md
unit-tests/Problems-Easy/: README.md  problems.md
unit-tests/solutions-1/solutions1-cmake-multi-module-with-catch2/: CMakeLists.txt
unit-tests/solutions-1/solutions1-cmake-multi-module-with-catch2/src/: CMakeLists.txt
unit-tests/solutions-1/solutions1-cmake-multi-module-with-catch2/src/functions/: functions.cpp  functions.h
unit-tests/solutions-1/solutions1-cmake-multi-module-with-catch2/test/: addition-test.cpp  calculate-perimeter-test.cpp  swap-test.cpp
unit-tests/solutions-1/solutions1-cmake-with-catch2/: CMakeLists.txt  functions.cpp
unit-tests/solutions-1/solutions1-cmake-with-catch2/tests/: addition-test.cpp  calculate-perimeter-test.cpp  swap-test.cpp
unit-tests/solutions-1/solutions1-simple-atanas-semerdzhiev-template/src/: application.cpp  library.cpp  library.h
unit-tests/solutions-1/solutions1-simple-atanas-semerdzhiev-template/test/: CMakeLists.txt  addition-test.cpp  calculate-perimeter-test.cpp  swap-test.cpp
unit-tests/solutions-1/src/: main.cpp
unit-tests/solutions-1/src/functions/: functions.cpp
unit-tests/solutions-1/test/: CMakeLists.txt  addition-test.cpp  calculate-perimeter-test.cpp  swap-test.cpp
